# synxSphere

./: .dockerignore  .env.backup  .env.debug  .env.dev  .env.docker  .env.docker.dev  .env.example  .env.local  .env.production  .env.production.example  .gitignore  .gitmodules  .npmrc  AUDIO_COLLABORATION.md  AUDIO_COLLABORATION_COMPLETE.md  AUDIO_FEATURES_COMPLETE.md  AUDIO_FEATURES_COMPLETE_EN.md  AUDIO_PLAYBACK_DEBUG_REPORT.md  AUDIO_PLAYBACK_DEBUG_REPORT_EN.md  AWS-5DAY-DEPLOYMENT-GUIDE.md  AWS_DEPLOYMENT_GUIDE.md  AWS_DEPLOYMENT_PLAN.md  BOX-CHANGE-MONITORING.md  CLEAN_ARCHITECTURE_IMPLEMENTATION.md  CLEAN_CONTROLLERS_IMPLEMENTATION.md  COLLABORATION-DEBUG-GUIDE.md  CRDT-COLLABORATION-README.md  DATABASE-ARCHITECTURE.md  DATE_FORMATTING_FIX_COMPLETE.md  DEMO_READY.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOY_MACOS.md  DETAILED-TRACK-INFO-USAGE.md  DEVELOPMENT_GUIDE.md  DOCKER-DEPLOYMENT-SUCCESS.md  Dockerfile  Dockerfile.collaboration  Dockerfile.opendaw  Dockerfile.production  (+178 more)
.next/: trace
services/ai-service/: .gitignore  Dockerfile  ai-service.code-workspace  package.json  pyproject.toml  requirements.txt  run_tests.sh  start.sh  start_ai_service.sh  test_complete.sh  test_core.sh  test_deps.py  test_simple.sh  tsconfig.json
services/ai-service/src/: main.py
services/ai-service/src/database/: connection.py  models.py  models_old.py  operations.py
services/ai-service/src/models/: __init__.py  audio_models.py  (+1 more)
services/ai-service/tests/: conftest.py  test_audio.py  test_database.py  test_health.py  test_integration.py  test_recommendations.py
(+385 files in other folders)
